--- a/templates/login.html
+++ b/templates/login.html
@@ -44,7 +44,7 @@
                 <p class="text-blue-500 text-sm mb-3">{{ msg1 }}</p>
                 {% endif %}
                 <div>
-                    <label class="block mb-2 text-blue-500" for="username">Username</label>
+                    <label class="block mb-2 text-blue-500" for="username">Username or Email</label>
                     <input class="w-full p-2 mb-6 text-blue-700 border-b-2 border-blue-500 outline-none focus:bg-gray-300"
                         type="text" name="username" required>
                 </div>
