--- a/templates/profile.html
+++ b/templates/profile.html
@@ -72,7 +72,7 @@
                     <label for="profile_photo" class="cursor-pointer">
                         <i class="fa-solid fa-pen-to-square"></i>
                     </label>
-                    <input type="file" id="profile_photo" name="profile_photo" class="hidden" accept="image/*" onchange="previewImage(event)">
+                    <input type="file" id="profile_photo" name="profzile_photo" class="hidden" accept="image/*" onchange="previewImage(event)">
                 </div>
                 <div class="flex lg:flex-row flex-col gap-20">
                     <div class="w-full lg:w-1/2">
